--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,12 @@ framework:
  #       uglifycss:
 #            bin: /app/Resources/node_modules/bin/uglifycss
 # Twig Configuration
+assetic:
+    debug:          '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    filters:
+        cssrewrite: ~
+
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
