--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,16 @@ parameters:
 #    parameter_name: value
 
 services:
+    app.credencial_uploader:
+        class: AppBundle\FileUploader
+        arguments: ['%credenciales_directory%']
+
+    app.doctrine_credencial_listener:
+        class: AppBundle\EventListener\CredencialUploadListener
+        arguments: ['@app.credencial_uploader']
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: preUpdate }
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
