recuperar contraseña, formulario estudiante

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -29,6 +29,9 @@ monolog:
         #chromephp:
         #    type:   chromephp
         #    level:  info
-
+swiftmailer:
+    transport: gmail
+    username:  '%mailer_user%'
+    password:  '%mailer_password%'
 #swiftmailer:
 #    delivery_address: me@example.com
