--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,4 +34,5 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/usuario/, role: ROLE_ADMIN }
+        - { path: ^/estudiante/.*/verify, role: ROLE_VERIFICADOR }
 
