--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,6 +14,9 @@ services:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
             - { name: doctrine.event_listener, event: preUpdate }
+    app.jarvis:
+        class: AppBundle\Jarvis
+
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
